--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,10 @@
 		{
 			"folderPath": "Shadowcat-Baps-Your-Code\\code\\controllers\\repository\\roles\\",
 			"badge": "💾"
+		},
+		{
+			"folderPath": "Shadowcat-Baps-Your-Code\\code\\datums\\mind.dm\\",
+			"badge": "🧠"
 		}
 	]
 }
