Instantiator boiler work
Turns out the whole "find a spawnpoint and spawn them" process is complicated as all hell.
This starts trying to untangle this into something I understand.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,5 +55,6 @@
 			"folderPath": "Shadowcat-Baps-Your-Code\\code\\datums\\mind.dm\\",
 			"badge": "🧠"
 		}
-	]
+	],
+	"chat.agent.enabled": false
 }
